<resources>

    // Generic Strings
    <string name="app_name">Inventory Manager</string>
    <string name="default_text">Default Text</string>
    <string name="scan">Scan</string>
    <string name="replace">Replace</string>
    <string name="photo">Photo</string>
    <string name="debug_database_wiped">Database Wiped</string>

    // Preference Strings

    <string name="pref_debug_key">debugKey</string>
    <string name="pref_debug_title">Debug Mode</string>
    <string name="pref_debug_summary">Turns on debugging mode for the application</string>

    <string name="pref_image_quality_key">imageQuality</string>
    <string name="pref_image_quality_title">Set Image Compression Ratio</string>
    <string name="pref_image_quality_summary">Larger values use more space per image but look better</string>
    <string name="pref_image_quality_default">75</string>

    <string-array name="pref_image_quality_title_array">
        <item>Low Quality</item>
        <item>Medium Quality</item>
        <item>Good Quality</item>
        <item>Full Quality</item>
    </string-array>

    <string-array name="pref_image_quality_value_array">
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>

    // AdMob Strings
    <string name="banner_ad_content_description">Banner Advertisement</string>

    // Dialog Strings
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>

    // About Dialog Strings
    <string name="about_dialog_psdev_license_content_description">Link to the license for licensing dialog library</string>
    <string name="about_dialog_zxing_license_content_description">Link to the license for ZXing barcode reader library</string>
    <string name="about_dialog_picasso_license_content_description">Link to the license for Picasso Image Loader library</string>

    // Dialog Body Strings
    <string name="dialog_action_default">do</string>
    <string name="dialog_body_start">"Do you want to "</string>
    <string name="dialog_body_end">" this?"</string>

    // Error Strings
    <string name="error_no_camera_app">Couldn\'t find an app to take pictures</string>
    <string name="error_image_resolve">Couldn\'t resolve barcode</string>
    <string name="error_product_not_found">Product not found</string>
    <string name="error_number_error">Invalid Number Input</string>
    <string name="error_external_files">Failed to get external files</string>
    <string name="error_product_name">Product Name is required.</string>


    // Appbar Strings
    <string name="toolbar_image_content_description">A picture of the currently displayed product or the inventory manager logo if no picture was found</string>
    <string name="toolbar_preferences_button">Preferences</string>
    <string name="toolbar_about_button">About</string>
    <string name="toolbar_add_debug_product_button">Add Debug Product</string>
    <string name="toolbar_add_debug_product_scan_button">Add Debug Product Scan</string>
    <string name="toolbar_wipe_database_button">Wipe Database</string>
    <string name="toolbar_content_description">Toolbar</string>
    <string name="toolbar_container">Toolbar Container</string>

    // Main Fragment Strings
    <string name="main_fragment_barcode_search_button_content_description">Press this button and take a picture of a barcode to search the database for that barcode</string>
    <string name="main_fragment_browse_products_btn_text">Browse Products</string>
    <string name="main_fragment_add_new_item_btn_text">Add New Item</string>
    <string name="main_fragment_quick_stock_change_btn_text">Quick Stock Change</string>
    <string name="main_fragment_picker_content_desc">Currently selected number is</string>
    <string name="main_fragment_quick_search">Quick Search</string>
    <string name="main_fragment_quick_change_label_text">Quickly add to the stock level of an item when inventory comes in. Just select a number and snap the barcode of the item!!</string>

    // Edit Fragment Strings
    <string name="edit_fragment_image_content_description">A picture of the currently displayed product</string>
    <string name="edit_fragment_image_button_content_description">Press this button to take a new picture of the selected product</string>
    <string name="edit_fragment_quick_barcode_button_content_description">Press this button and take a picture of a barcode to fill this product\'s barcode field.</string>
    <string name="edit_fragment_switch_content_description">Switch the tracking status of this product</string>
    <string name="edit_fragment_delete_button_content_description">Delete</string>
    <string name="edit_fragment_fab_content_description">Save</string>
    <string name="edit_button_delete_product_string">Delete Product</string>
    <string name="edit_product_name">Product Name</string>
    <string name="edit_custom_id">Custom Id</string>
    <string name="edit_barcode">Barcode</string>
    <string name="edit_cost">Cost</string>
    <string name="edit_retail">Retail</string>
    <string name="edit_current_stock">Current Stock</string>
    <string name="edit_target_stock">Target Stock</string>
    <string name="edit_tracking">Tracking</string>
    <string name="edit_switch_on">On</string>
    <string name="edit_switch_off">Off</string>

    // Detail Fragment Strings
    <string name="detail_fragment_image_content_description">A Picture of the currently displayed product</string>
    <string name="detail_barcode_label">Barcode#</string>
    <string name="detail_custom_id_label">Custom ID#</string>
    <string name="detail_cost_label">Cost</string>
    <string name="detail_retail_label">Retail</string>
    <string name="detail_current_stock_label">Current Stock</string>
    <string name="detail_target_stock_label">Target Stock</string>
    <string name="detail_tracked_label">Tracked</string>
    <string name="detail_tracked_yes">Yes</string>
    <string name="detail_tracked_no">No</string>
    <string name="detail_fragment_fab_content_description">Edit</string>

    // Recycler Fragment Item Strings
    <string name="recycler_fragment_search_hint">Search</string>
    <string name="recycler_fragment_item_image_content_description">A picture of the product represented in this entry</string>
    <string name="recycler_fragment_search_bar">Search Bar</string>
    <string name="recycler_fragment_rv_content_description">A list of products in the database</string>
    <string name="recycler_item_cost">Cost:</string>
    <string name="recycler_item_retail">Retail:</string>
    <string name="recycler_item_current_stock">Current Stock:</string>
    <string name="recycler_item_tracking">Tracking</string>

    // About Dialog Strings
    <string name="about_title">About</string>
    <string name="about_version">"Version: "</string>
    <string name="about_third_party_licenses">3rd Party Library Licenses</string>

    <string name="about_license_dialog_name">PSDev\'s License Dialog</string>
    <string name="about_license_dialog_url">http://github.psdev.de/LicensesDialog/</string>
    <string name="about_license_dialog_copyright">Copyright 2013 Philip Schiffer</string>

    <string name="about_zxing_name">ZXing\'s Barcode Reader</string>
    <string name="about_zxing_url">https://github.com/zxing/zxing</string>
    <string name="about_zxing_copyright">Copyright 2017 ZXing</string>

    <string name="about_picasso_name">Picasso Image Loader</string>
    <string name="about_picasso_url">https://square.github.io/picasso/</string>
    <string name="about_picasso_copyright">Copyright 2013 Square, Inc.</string>

    // Google Mobile Adds Strings
    <string name="ads_test_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    // Widget Strings
    <string name="widget_name">Product\nName</string>
    <string name="widget_current_stock">"Current\nStock"</string>
    <string name="widget_target_stock">"Target\nStock"</string>
    <string name="widget_empty_text">When you start tracking items they will be displayed here if their inventory is low.</string>

    // Switch Accessibility Strings
    <string name="tracking_yes_with_switch">Item is being tracked.  Select to switch</string>
    <string name="tracking_no_with_switch">Item is not being tracked.  Select to switch</string>
    <string name="tracking_yes">Item is being tracked.</string>
    <string name="tracking_no">Item is not being tracked.</string>
</resources>
