<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAccessibility="no"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:importantForAccessibility="no"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/about_version_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusDown="@id/about_third_party_tv"
        android:nextFocusUp="@id/about_picasso_tv"
        android:textColor="@color/textColorPrimaryLight" />

    <View
        style="@style/DividerStyle"
        android:layout_margin="@dimen/about_item_margin" />

    <TextView
        android:id="@+id/about_third_party_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/about_item_margin"
        android:contentDescription="@string/about_third_party_licenses"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusDown="@id/about_license_dialog_tv"
        android:nextFocusUp="@id/about_version_tv"
        android:text="@string/about_third_party_licenses"
        android:textColor="@color/textColorPrimaryLight" />

    <TextView
        android:id="@+id/about_license_dialog_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_item_height"
        android:layout_margin="@dimen/about_item_margin"
        android:contentDescription="@string/about_dialog_psdev_license_content_description"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusDown="@id/about_zxing_tv"
        android:nextFocusUp="@id/about_third_party_tv"
        android:text="@string/about_license_dialog_name"
        android:textColor="@color/httpLinkBlue" />

    <TextView
        android:id="@+id/about_zxing_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_item_height"
        android:layout_margin="@dimen/about_item_margin"
        android:contentDescription="@string/about_dialog_zxing_license_content_description"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusDown="@id/about_picasso_tv"
        android:nextFocusUp="@id/about_license_dialog_tv"
        android:text="@string/about_zxing_name"
        android:textColor="@color/httpLinkBlue" />

    <TextView
        android:id="@+id/about_picasso_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_item_height"
        android:layout_margin="@dimen/about_item_margin"
        android:contentDescription="@string/about_dialog_picasso_license_content_description"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusDown="@id/about_version_tv"
        android:nextFocusUp="@id/about_zxing_tv"
        android:text="@string/about_picasso_name"
        android:textColor="@color/httpLinkBlue" />


</LinearLayout>