<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">\

    <TextView
        style="@style/EditFragmentLabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/edit_cost"
        app:layout_constraintBottom_toTopOf="@id/edit_fragment_cost_et"
        app:layout_constraintLeft_toLeftOf="@id/edit_fragment_cost_et" />

    <EditText
        android:id="@+id/edit_fragment_cost_et"
        style="@style/EditFragmentTextStyle"
        android:layout_width="@dimen/edit_fragment_et_small_field"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_cost"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/edit_fragment_retail_et"
        app:layout_constraintTop_toBottomOf="@id/edit_product_barcode_et" />

    <TextView
        style="@style/EditFragmentLabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/edit_retail"
        app:layout_constraintBottom_toTopOf="@id/edit_fragment_retail_et"
        app:layout_constraintLeft_toLeftOf="@id/edit_fragment_retail_et" />

    <EditText
        android:id="@+id/edit_fragment_retail_et"
        style="@style/EditFragmentTextStyle"
        android:layout_width="@dimen/edit_fragment_et_small_field"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_retail"
        app:layout_constraintLeft_toRightOf="@id/edit_fragment_cost_et"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_product_barcode_et" />

    <TextView
        style="@style/EditFragmentLabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/edit_current_stock"
        app:layout_constraintBottom_toTopOf="@id/edit_fragment_stock_current_et"
        app:layout_constraintLeft_toLeftOf="@id/edit_fragment_stock_current_et" />

    <EditText
        android:id="@+id/edit_fragment_stock_current_et"
        style="@style/EditFragmentTextStyle"
        android:layout_width="@dimen/edit_fragment_et_small_field"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_current_stock"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/edit_fragment_stock_target_et"
        app:layout_constraintTop_toBottomOf="@id/edit_fragment_cost_et" />

    <TextView
        style="@style/EditFragmentLabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/edit_target_stock"
        app:layout_constraintBottom_toTopOf="@id/edit_fragment_stock_target_et"
        app:layout_constraintLeft_toLeftOf="@id/edit_fragment_stock_target_et" />

    <EditText
        android:id="@+id/edit_fragment_stock_target_et"
        style="@style/EditFragmentTextStyle"
        android:layout_width="@dimen/edit_fragment_et_small_field"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_target_stock"
        app:layout_constraintLeft_toRightOf="@id/edit_fragment_stock_current_et"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_fragment_retail_et" />

    <TextView
        android:id="@+id/edit_fragment_track_switch_label"
        style="@style/EditFragmentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_tracking"
        app:layout_constraintBottom_toTopOf="@id/edit_fragment_track_switch_button"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />

    <Switch
        android:id="@+id/edit_fragment_track_switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:showText="true"
        android:textOff="@string/edit_switch_off"
        android:textOn="@string/edit_switch_on"
        app:layout_constraintBottom_toTopOf="@id/edit_delete_button"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_fragment_stock_current_et" />

    <Button
        android:id="@+id/edit_delete_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_button_delete_product_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_fragment_track_switch_button" />

</android.support.constraint.ConstraintLayout>