<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/toolbarFadeTo"
            style="@style/VisibleLayoutStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:importantForAccessibility="no">

            <ImageView
                android:contentDescription="@string/toolbar_image_content_description"
                android:id="@+id/toolbar_image_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/appbar_image_dimen"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@mipmap/logo"
                android:visibility="visible"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:contentDescription="@string/toolbar_content_description">

                <TextView
                    android:id="@+id/toolbar_text_view"
                    android:layout_width="280dp"
                    android:layout_height="32dp"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp"
                    app:layout_collapseMode="pin"
                    android:visibility="invisible"
                    android:importantForAccessibility="no"/>

            </android.support.v7.widget.Toolbar>

            <View
                style="@style/DividerStyle"
                android:layout_gravity="bottom" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

</merge>